cmake_minimum_required(VERSION 3.0)
project(FRCC_CPP_Intro_To_Programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(main.cpp main.cpp)
add_executable(Program10_5.cpp Program_10/Program10_5.cpp)
add_executable(Program11_1 SimonsJ_Program11/Program11_1.cpp)
add_executable(Program11_2 SimonsJ_Program11/Program11_2.cpp)
add_executable(Program11_3 SimonsJ_Program11/Program11_3.cpp)
add_executable(Program11_4 SimonsJ_Program11/Program11_4.cpp)
add_executable(Program12_1 SimonsJ_Program12/Program12_1.cpp)
add_executable(Program12_2 SimonsJ_Program12/Program12_2.cpp)